--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,11 +1,52 @@
 .body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 99vh;
+  height: max-content;
+
+  .error {
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    background-color: #ec2323;
+    z-index: 200;
+    text-align: center;
+    color: #fff;
+    font-size: 13px;
+    transition: 0.5s;
+    box-shadow: 0px -5px 13px #000;
+  }
+
+  .errn {
+    top: -20px;
+  }
+
   .form {
     background-color: #fff;
     width: 300px;
     height: max-content;
-    padding: 10px;
+    padding: 15px 10px;
     border-radius: 4px;
-    margin: auto;
+    margin: 20px auto;
+    position: relative;
+
+    .load {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: #f8f8f857;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 200;
+
+      img {
+        width: 100px;
+      }
+    }
 
     h1 {
       font-size: 30px;
@@ -69,5 +110,8 @@
         cursor: no-drop;
       }
     }
+  }
+  .hr {
+    margin: 15px;
   }
 }
