--- a/src/scss/Card.scss
+++ b/src/scss/Card.scss
@@ -29,23 +29,42 @@
   position: relative;
   width: 300px;
   height: 200px;
-  transition: all 1s;
+  transition: 1s;
+  margin: auto;
+  cursor: pointer;
+  animation: ap 0.5s;
+
+  @keyframes ap {
+    from {
+      transform: scale(1.2);
+    }
+    to {
+      transform: scale(1);
+    }
+  }
 
   .view {
     background-color: #00000000;
-    transition: 0.5s;
   }
 
   .card_body {
-    transition: 1s;
     position: relative;
     border-radius: 10px;
     width: 300px;
+    overflow: hidden;
     height: 200px;
 
     img {
       @include absolute(100%, 100%, 0, null, null, 0);
       z-index: -1;
+    }
+
+    .front_n {
+      background: linear-gradient(to right, #00000060, #00000000);
+      width: 100%;
+      height: 100%;
+      padding-left: 10px;
+      color: #fff;
     }
 
     .button {
@@ -56,11 +75,79 @@
 
   .view {
     position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #00000078;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 100;
+
+    .card_body {
+      overflow: visible;
+      border-radius: 20px;
+      transform-style: preserve-3d;
+      width: 500px;
+      height: 400px;
+      animation: cardA 0.6s;
+      color: #fff;
+      position: relative;
+      img {
+        border-radius: 20px;
+      }
+
+      @keyframes cardA {
+        from {
+          transform: rotateY(180deg) rotateX(90deg);
+        }
+        to {
+          transform: rotateY(360deg);
+        }
+      }
+      .front {
+        transform: translateZ(20px);
+        backface-visibility: hidden;
+        background-color: #00000052;
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 19px;
+
+        .infoEx {
+          display: flex;
+          justify-content: space-evenly;
+          width: 100%;
+        }
+      }
+      .button {
+        right: 0%;
+        top: -10%;
+        background-color: #d32626;
+        color: #fff;
+        border: 0;
+        font-size: 17px;
+        padding: 3px 8px;
+        border-radius: 4px;
+        width: max-content;
+        height: max-content;
+      }
+      .back {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #000;
+        width: 100%;
+        height: 100%;
+        transform: rotateX(180deg) translateZ(1px);
+        backface-visibility: hidden;
+      }
+    }
   }
 }
